flatpak: take current branch into account

We need to use the current branch so that we can compartmentalize a build
in case the application is opened with a different branch in another
workbench window.

https://bugzilla.gnome.org/show_bug.cgi?id=792383